// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInner is high contrast mode enabled: false 1`] = `
<BodyClassModifier
  classNames={
    Array [
      "theme-switcher",
    ]
  }
  deps={
    Object {
      "documentManipulator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "document": undefined,
      },
      "loadTheme": [MockFunction],
      "storeActionMessageCreator": null,
      "storesHub": null,
    }
  }
/>
`;

exports[`ThemeInner is high contrast mode enabled: true 1`] = `
<BodyClassModifier
  classNames={
    Array [
      "theme-switcher",
      "high-contrast-theme",
    ]
  }
  deps={
    Object {
      "documentManipulator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "document": undefined,
      },
      "loadTheme": [MockFunction],
      "storeActionMessageCreator": null,
      "storesHub": null,
    }
  }
/>
`;
